syntax = "proto3";

import "google/api/annotations.proto";

package bear;

service Bear {
    rpc GetListBear (ListBearRequest) returns (ListBearResponse){
      option (google.api.http) = {
        get: "/v1/bear/bears"
      };
    };

    rpc GetBearDetail(BearRequest) returns (BearResponse){
      option (google.api.http) = {
        get: "/v1/bear/bears/{userId}"
      };
    };

    rpc GetBearBlocks(BearBlockRequest) returns (BearBlockResponse){
      option (google.api.http) = {
        get: "/v1/bear/blocks/{bearId}"
      };
    };

    rpc CreateBlocks(CreateBlockRequest) returns (CreateBlockResponse){
      option (google.api.http) = {
        post: "/v1/bear/blocks"
        body: "*"
      };
    };

    rpc GetBlocksToAssign(GetBlockRegisterRequest) returns(GetBlockRegisterResponse){
      option (google.api.http) = {
        get : "/v1/bear/blocks/register/{userId}"
      };
    };

    rpc PostReview(PostReviewRequest) returns (PostReviewResponse){
      option (google.api.http) = {
        post :"/v1/bear/review"
        body: "*"
      };
    };
}

message PostReviewRequest {
  uint32 userId = 1;
  uint32 bearId = 2;
  uint32 rate = 3;
  string description = 4;
}

message PostReviewResponse {
  string status = 1;
  string message = 2;
}

message BearRequest {
  uint32 userId = 1;
}

message BearResponse{
  User user = 1;
  repeated Review reviews = 2;
}

message ListBearRequest {
   uint32 city = 1;
}

message ListBearResponse {
  repeated User users = 1;
}

message BearBlockRequest {
   uint32 userId = 1;
   uint32 bearId = 2;
   uint64 date = 3;
}

message BearBlockResponse {
  string status = 1;
  repeated UserBlockDate userBlockDates = 2;
}

message CreateBlockRequest {
  repeated UserBlockDate userBlockDate = 1;
  uint32 bearId = 2;
}

message CreateBlockResponse {
  string status = 1;
  string message = 2;
  repeated UserBlockDate block = 3;
}

message GetBlockRegisterRequest{
  uint32 userId =1;
  uint64 date = 2;
}

message GetBlockRegisterResponse{
  string message  = 1;
  repeated UserBlockDate userBlockDates = 2;
}

message UserBlockDate {
  uint32 id = 1;
  Block block = 2;
  string blockDate = 3;
  string description = 4;
  string status = 5;
  double price = 6;
  bool isOrdered = 7;
  uint32 blockId = 8;
}

message Block {
    uint32 id = 1;
    string description = 2;
    string name = 3;
    string hourStart = 4;
    string hourEnd = 5;
    bool isCreated = 7;
    uint64 price = 8;
    string blockDescription = 9;
}

message Review {
   uint32 id = 1;
   User userReviewed  = 2;
   uint64 rate = 3;
   uint64 userId = 4;
   string description = 5;
}

message BlockOrder{
  uint32 id = 1;
  UserBlockDate userBlockDate = 2;
  User user = 3;
  string status =4;
}

message User {
  uint32 id = 1;
  string email = 2;
  string username = 3;
  string passwordHash = 4;
  Profile profile = 5;
  string deviceToken = 6;
}

message Profile {
  uint32 id = 1;
  string avatar = 2;
  string firstname = 3;
  string lastname = 4;
  string birthdate = 5;
  uint32 sex = 6;
  Province province = 7;
  double starRate = 8;
  string description = 9;
}

message Province {
  uint32 provinceId = 1;
  string provinceName = 2;
}
